turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/pass/alt.ts
import { alt1 } from "alt/alt1";
import { alt2 } from "alt/alt2";
console.log(alt1, alt2);
