turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/fail/sub-infix-sep.ts
import { subInfixSep } from "@/sub/@";
console.log(subInfixSep);
